Fixed gradient bug in case study list and profile image shift

--- a/css/styles.css
+++ b/css/styles.css
@@ -334,7 +334,7 @@ Projects
 }
 
 .caseStudy-container {
-  background: linear-gradient(to right, rgba(44, 45, 51, 0.03),white); /*Dark Night Blue*/
+  background: linear-gradient(to right, white, rgba(44, 45, 51, 0.05) 40px, white); /*Dark Night Blue*/
   max-width: 1040px;
   padding: 40px;
   margin: auto;
@@ -388,13 +388,8 @@ Projects
     width: 320px;
   }
 
-  .caseStudyList-container {
-    padding: 0px 0px 120px 0px;
-    background: linear-gradient(to top, rgba(44, 45, 51, 0.03), rgba(44, 45, 51, 0.03) 120px, white 120px)
-  }
-
   .caseStudy-container {
-    background: linear-gradient(to top, rgba(44, 45, 51, 0.03),white); /*Dark Night Blue*/
+    background: linear-gradient(to top, white, rgba(44, 45, 51, 0.05) 40px, white); /*Dark Night Blue*/
   }
 
   .caseStudy-content {
@@ -476,7 +471,6 @@ About
   }
 
   .about-figure {
-    position: sticky;
     top: 280px;
   }
 }
@@ -505,6 +499,11 @@ About
   .about-imageContainer {
     margin-right: 0;
     margin-bottom: 24px;
+  }
+
+  .about-figure {
+    position: relative;
+    top: 0;
   }
 
   .about-descriptions {
